--- a/trunk/SourceCode/KLTN/war/TestDate.html
+++ b/trunk/SourceCode/KLTN/war/TestDate.html
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>Tháng 6 năm 2010</title>
 <link type="text/css" href="js/ui/themes/base/ui.all.css" rel="stylesheet" />
-<script type="text/javascript" src="js/jquery-1.7.1.min.js"></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script type="text/javascript" src="js/ui/ui.datepicker_vn.js"></script>
 
 <script type="text/javascript">
